# DiVERE

./: CHANNEL_GAMMA_ANALYSIS.md  PROCESS_ISOLATION_ANALYSIS.md  README.md  build_macos.sh  config alias  memory.md  memoryOpti.md  pyproject.toml
.github/workflows/: build.yml
config/: app_settings.json
config/colorchecker/: kodak_portra_160_DIR_kodak_endura_premier_d60_cc24data.json  kodak_portra_400_DIR_kodak_endura_premier_d60_cc24data.json  portra400-noritsu_cc24data.json  weights.json
config/colorspace/: Hasselblad_X5.json
config/curves/: Ilford MGFB 0.json  Ilford MGFB 00.json  Ilford MGFB 1.json  Ilford MGFB 2.json  Ilford MGFB 3.json  Ilford MGFB 4.json  Ilford MGFB 5.json  Ilford_MGFB_0.cube  Ilford_MGFB_00.cube  Ilford_MGFB_1.cube  Ilford_MGFB_2.cube  Ilford_MGFB_3.cube  Ilford_MGFB_4.cube  Ilford_MGFB_5.cube  Kodak_2383.cube  Kodak_2393.cube  Kodak_Ektacolor_Endura.cube  Kodak_Endura_Premier.cube  Kodak_Portra_Endura.cube  Kodak_Supra_Endura.cube  Kodak_Ultra_Endura.cube
config/curves/lightroomXMP/: DiVERE_Ilford_MGFB_00_HDR.xmp  DiVERE_Ilford_MGFB_00_HDR_BC.xmp  DiVERE_Ilford_MGFB_00_SDR.xmp  DiVERE_Ilford_MGFB_00_SDR_BC.xmp  DiVERE_Ilford_MGFB_0_HDR.xmp  DiVERE_Ilford_MGFB_0_HDR_BC.xmp  DiVERE_Ilford_MGFB_0_SDR.xmp  DiVERE_Ilford_MGFB_0_SDR_BC.xmp  DiVERE_Ilford_MGFB_1_HDR.xmp  DiVERE_Ilford_MGFB_1_HDR_BC.xmp  DiVERE_Ilford_MGFB_1_SDR.xmp  DiVERE_Ilford_MGFB_1_SDR_BC.xmp  DiVERE_Ilford_MGFB_2_HDR.xmp  DiVERE_Ilford_MGFB_2_HDR_BC.xmp  DiVERE_Ilford_MGFB_2_SDR.xmp  DiVERE_Ilford_MGFB_2_SDR_BC.xmp  DiVERE_Ilford_MGFB_3_HDR.xmp  DiVERE_Ilford_MGFB_3_HDR_BC.xmp  DiVERE_Ilford_MGFB_3_SDR.xmp  DiVERE_Ilford_MGFB_3_SDR_BC.xmp  DiVERE_Ilford_MGFB_4_HDR.xmp  DiVERE_Ilford_MGFB_4_HDR_BC.xmp  DiVERE_Ilford_MGFB_4_SDR.xmp  DiVERE_Ilford_MGFB_4_SDR_BC.xmp  DiVERE_Ilford_MGFB_5_HDR.xmp  DiVERE_Ilford_MGFB_5_HDR_BC.xmp  DiVERE_Ilford_MGFB_5_SDR.xmp  DiVERE_Ilford_MGFB_5_SDR_BC.xmp  DiVERE_Kodak_2383_HDR.xmp  DiVERE_Kodak_2383_HDR_BC.xmp  DiVERE_Kodak_2383_SDR.xmp  DiVERE_Kodak_2383_SDR_BC.xmp  DiVERE_Kodak_2393_HDR.xmp  DiVERE_Kodak_2393_HDR_BC.xmp  DiVERE_Kodak_2393_SDR.xmp  DiVERE_Kodak_2393_SDR_BC.xmp  DiVERE_Kodak_Ektacolor_Endura_HDR.xmp  DiVERE_Kodak_Ektacolor_Endura_HDR_BC.xmp  DiVERE_Kodak_Ektacolor_Endura_SDR.xmp  DiVERE_Kodak_Ektacolor_Endura_SDR_BC.xmp  (+16 more)
config/matrices/: 5000ed_pt400_dir_tungsten.json  5000ed_u400.json  9000ed_5207_c41.json  9000ed_5207_c41_originalColorRef.json  9000ed_5207_ecn2.json  9000ed_5219_Daylight.json  9000ed_LuckyC200_new.json  9000ed_LuckyC200_originalColorRef.json  9000ed_fuji100.json  9000ed_g200_120.json  9000ed_g200_120_originalColorRef.json  9000ed_g200_135.json  9000ed_g200_135_originalColorRef.json  9000ed_luckyC200.json  9000ed_pt160.json  9000ed_pt160_dir.json  9000ed_pt400.json  9000ed_pt400_dir.json  9000ed_pt400_enhance_B.json  9000ed_pt400_noritsu.json  9000ed_pt400_noritsu_丰悦.json  9000ed_pt400_originalColorRef.json  9000ed_u400_originalColorRef.json  X5_5219_Daylight.json
divere/: __init__.py  __main__.py
divere/core/: app_context.py  color_space.py  data_types.py  folder_navigator.py  gpu_accelerator.py  image_manager.py  lut_processor.py  math_ops.py  pipeline_processor.py  preview_worker_process.py  the_enlarger.py
divere/i18n/: __init__.py
divere/standalone_tools/idt_calculator/: idt_calculator_window.py  idt_optimizer.py
divere/ui/: curve_editor_widget.py  main_window.py  parameter_panel.py  preview_widget.py  shortcut_help_dialog.py  shortcuts.py
divere/utils/: auto_preset_manager.py  path_manager.py  smart_preset_loader.py
divere/utils/ccm_optimizer/: pipeline.py
